@@ -1,11 +1,10 @@
 package com.bisang.backend.chat.repository.chatroom;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.core.ZSetOperations;
 import org.springframework.stereotype.Repository;
 
@@ -15,28 +14,26 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class ChatroomRedisRepository {
 
-    private final RedisTemplate<String, Long> redisLongTemplate;
+    private final StringRedisTemplate redisTemplate;
 
     //유저별 채팅방 찾을 때 사용할 키
     private static final String chatroomKey = "userChatroom:";
 
-    public void updateUserChatroom(long userId, long teamId, Double timestamp) {
-        redisLongTemplate.opsForZSet().add(chatroomKey + userId, teamId, timestamp);
-    }
-
-    public void deleteUserChatroom(long userId, long teamId) {
-        redisLongTemplate.opsForZSet().remove(chatroomKey + userId, teamId);
+    public void deleteUserChatroom(long userId, long chatroomId) {
+        redisTemplate.opsForZSet().remove(chatroomKey + userId, String.valueOf(chatroomId));
     }
 
     public List<Long> getUserChatroom(long userId) {
-        Set<ZSetOperations.TypedTuple<Long>> result
-                = redisLongTemplate.opsForZSet()
-                .reverseRangeWithScores(chatroomKey + userId, 0, 19);
+        Set<ZSetOperations.TypedTuple<String>> result = redisTemplate.opsForZSet()
+                .reverseRangeWithScores(chatroomKey + userId, 0, -1);
 
-        return (result == null) ? new ArrayList<>() :
-                result.stream()
-                        .map(ZSetOperations.TypedTuple::getValue)
-                        .collect(Collectors.toList());
+        if (result == null) {
+            return null;
+        }
+
+        return result.stream()
+                .map(tuple -> Long.valueOf(tuple.getValue()))
+                .toList();
     }
 
 }
